# ppmtest

./: .env.example  .env.template  .gitignore  API_README.md  CLAUDE.md  CONTENT_ANALYZER_README.md  CONTENT_ANALYZER_USAGE.md  DATABASE_MODELS.md  EXTRACTOR_README.md  LOGIN_IMPLEMENTATION_REPORT.md  Makefile  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES_v1.1.0.md  RELEASE_v1.1.0.md  TASK_008_COMPLETION_REPORT.md  alembic.ini  app.py  example_usage.py  go.mod  init_db.py  memory.md  pyproject.toml  real_video_test_report.json  requirements.txt  requirements_basic.txt  requirements_minimal.txt  simple_test.py  simple_verify.py  start.sh  start_api.sh  test_complete_login.py  test_glm_api.py  test_mock_video_ingestion.py  test_real_video.py  test_report.json  test_simple.py  test_video_ingestion.py  todo.md  validate_api.py  (+1 more)
.claude/: execution-status.md
.claude/commands/: pm-epic-start.md
.claude/prds/: bilibili-video-analyzer.md
archive/: README.md
archive/examples/: content_analysis_example.py  usage_example.py
archive/validation/: verify_knowledge_manager.py
bilibili_analyzer/: __init__.py  auth_simple.py  config.py  main_simple.py  models.py  services.py
bilibili_analyzer/admin/: __init__.py
cmd/migrate/: main.go
docs/: TESTING_REPORT.md
migrations/: env.py
templates/: about.html  analysis_detail.html  base.html  dashboard.html  index.html  knowledge.html  login.html  settings.html
tests/: test_content_analyzer.py  test_core.py  test_knowledge_manager.py  test_knowledge_manager_performance.py  test_performance.py  test_video_extractor.py
(+118 files in other folders)
